--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>CUBE</title>
   </head>
-  <body>
+  <body style="background-color:#e2e5c3">
     <canvas id="canvas" width="1000" height="1500" style="margin-left:20%;margin-top:10% "></canvas>
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
